premier changement sur le fichier index.html pour stylage du titre H1

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <head>
         <title>cocou</title>
         <meta charset="UTF8">
+        <style type="text/css">
+            h1{
+                position: absolute;
+                top:25%;
+                width: 99%;
+                font-family: Courier;
+                font-size: 120%;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
      <h1>Hi, it's me !</h1>   
